# browser

./: CMakeLists.txt  README.md  bootstrap_build.ps1  vcpkg.json
config/: config.json
src/: main.cpp
src/app/: NovaApp.cpp  NovaApp.h
src/core/entities/: EntityDetector.cpp  EntityDetector.h
src/core/extract/: HtmlExtractor.cpp  HtmlExtractor.h
src/core/net/: FetchService.cpp  FetchService.h  RateLimiter.cpp  RateLimiter.h  UrlTools.cpp  UrlTools.h
src/core/storage/: Migrations.cpp  Migrations.h  SqliteDb.cpp  SqliteDb.h
src/services/ai/: OllamaClient.cpp  OllamaClient.h  RagComposer.cpp  RagComposer.h
src/services/deepsearch/: DeepSearchService.cpp  DeepSearchService.h
src/services/scraper/: ScraperService.cpp  ScraperService.h
src/services/search/: DdgHtmlSearch.cpp  DdgHtmlSearch.h
src/ui/: BrowserTab.cpp  BrowserTab.h  EntityGraphWidget.cpp  EntityGraphWidget.h  InternalSchemeHandler.cpp  InternalSchemeHandler.h  MainWindow.cpp  MainWindow.h  ScrapeDialog.cpp  ScrapeDialog.h  SidePanel.cpp  SidePanel.h  TabWidget.cpp  TabWidget.h
src/util/: Config.cpp  Config.h  Log.cpp  Log.h  Time.cpp  Time.h
tests/: CMakeLists.txt  EntityDetectorTests.cpp  UrlToolsTests.cpp
